--- a/SmardtInterviewTechnicalTest/App.xaml
+++ b/SmardtInterviewTechnicalTest/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:SmardtInterviewTechnicalTest"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/RoundTextBox.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+           
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
