--- a/SmardtInterviewTechnicalTest/MainWindow.xaml
+++ b/SmardtInterviewTechnicalTest/MainWindow.xaml
@@ -11,6 +11,14 @@
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBox}">
+            <Setter Property="FontSize" Value="25" />
+        </Style>
+        <Style TargetType="{x:Type Label}">
+            <Setter Property="FontSize" Value="17" />
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -19,21 +27,21 @@
         <!--CODE FOR FUNCTION 1-->
         <StackPanel Grid.Row="0">
             <!--INPUT CODE-->
-            <TextBlock HorizontalAlignment="Center" FontSize="20">Function 1 INPUTS</TextBlock>
+            <Label HorizontalAlignment="Center" FontSize="20" BorderBrush="Aquamarine" BorderThickness="2">Function 1 INPUTS</Label>
             <UniformGrid Columns="3">
                 <Label Content="Input Temperature" HorizontalAlignment="Center"/>
                 <Label Content="Temperature setpoint" HorizontalAlignment="Center"/>
                 <Label Content="Temperature setpoint deadband" HorizontalAlignment="Center"/>
             </UniformGrid>
             <UniformGrid Columns="3" Rows=" 1">
-                <TextBox  Text="{Binding InputTemperature}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                <TextBox  Text="{Binding TemperatureSetpoint}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                <TextBox  Text="{Binding TemperatureSetpointDeadband}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox  Text="{Binding InputTemperature}" BorderThickness="1" Height= "50" Style="{StaticResource NullTextTextBox}" Tag="Enter Temperature"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox  Text="{Binding TemperatureSetpoint}" BorderThickness="1" Height= "50" Style="{StaticResource NullTextTextBox}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox  Text="{Binding TemperatureSetpointDeadband}" BorderThickness="1" Height= "50" Style="{StaticResource NullTextTextBox}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
             </UniformGrid>
             <!--OUTPUT CODE-->
-            <TextBlock HorizontalAlignment="Center" FontSize="20">Function 1 OUTPUTS</TextBlock>
-            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding CoolingBool}" IsHitTestVisible ="False"  FontSize="16" VerticalContentAlignment="Center">Cooling On / Off</CheckBox>
-            <Grid Margin="20,20,0,20" >
+            <Label HorizontalAlignment="Center" FontSize="20" BorderBrush="Aquamarine" BorderThickness="2">Function 1 OUTPUTS</Label>
+            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding CoolingBool}" IsHitTestVisible ="False" FontSize="25"  VerticalContentAlignment="Center">Cooling On / Off</CheckBox>
+            <Grid Margin="0,0,0,0" >
                 <WindowsFormsHost>
                     <wf:Chart x:Name="TrendChartTemperature">
                         <wf:Chart.Series>
@@ -47,9 +55,22 @@
                 </WindowsFormsHost>
             </Grid>
             <UniformGrid Columns="3">
-                <Button Click="UpdateChart_Click">Update Chart</Button>
+                <Button Click="UpdateChart_Click" Content="Update Chart"  FontSize="20"    Height="30" Background="#FFB3FBA8" BorderThickness="0">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="25" />
+                        </Style>
+                        <Style TargetType="Button">
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Foreground" Value="Blue" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Resources>
+                </Button>
                 <Slider Visibility="Hidden"/>
-                <Slider x:Name="NumberOfPoints"     IsSnapToTickEnabled="True" Minimum="0"  Maximum="0"  TickFrequency="1" />
+                <Slider x:Name="NumberOfPoints"   IsSnapToTickEnabled="True" Minimum="0"  Maximum="0"  TickFrequency="1" />
 
 
             </UniformGrid>
@@ -57,9 +78,9 @@
 
         <!--CODE FOR FUNCTION 2-->
         <StackPanel Grid.Row="1">
-           
 
-            <TextBlock HorizontalAlignment="Center" FontSize="20">Function 2 INPUTS</TextBlock>
+
+            <Label HorizontalAlignment="Center" FontSize="20" BorderBrush="Aquamarine" BorderThickness="2">Function 2 INPUTS</Label>
         <UniformGrid Columns="8">
             <Label Content="Input 1" HorizontalAlignment="Center"/>
             <Label Content="Input 2" HorizontalAlignment="Center"/>
@@ -72,17 +93,17 @@
         </UniformGrid>
         <UniformGrid Columns="8" Rows=" 1">
            
-            <TextBox Text="{Binding TextInput1, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput2, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput3, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput4, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput5, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput6, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput7, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding TextInput8, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <TextBox Text="{Binding TextInput1, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput2, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput3, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput4, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput5, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput6, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput7, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBox Text="{Binding TextInput8, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource NullTextTextBox}" BorderThickness="1" Height= "50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
             </UniformGrid>
-            <TextBlock HorizontalAlignment="Center" FontSize="20">Function 2 OUTPUTS</TextBlock>
-            <TextBlock Text="{Binding OutputFunction2}" HorizontalAlignment="Center"></TextBlock>
+            <Label HorizontalAlignment="Center" FontSize="20" BorderBrush="Aquamarine" BorderThickness="2">Function 2 OUTPUTS</Label>
+            <Label Content="{Binding OutputFunction2}" HorizontalAlignment="Center"></Label>
         </StackPanel>
     </Grid>
 </Window>
