--- a/SmardtInterviewTechnicalTest/Themes/RoundTextBox.xaml
+++ b/SmardtInterviewTechnicalTest/Themes/RoundTextBox.xaml
@@ -1,4 +1,50 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style x:Key="NullTextTextBox" TargetType="{x:Type TextBox}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border
+                        Background="{Binding Background, RelativeSource={RelativeSource TemplatedParent}}"
+                        BorderBrush="{Binding BorderBrush, RelativeSource={RelativeSource TemplatedParent}}"
+                        BorderThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}}"
+                        CornerRadius="10">
+                        <Grid>
+                            <TextBox
+                                x:Name="NullTextBox"
+                                Margin="1"
+                                Padding="5"
+                                VerticalAlignment="Center"
+                                HorizontalContentAlignment="Center"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Foreground="{Binding Foreground, RelativeSource={RelativeSource TemplatedParent}}"
+                                MaxLength="{Binding MaxLength, RelativeSource={RelativeSource TemplatedParent}}"
+                                Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="10,0,0,0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                FontSize="25"
+                                Foreground="DarkGray"
+                                IsHitTestVisible="False"
+                                Text="{Binding TemplatedParent.Tag, RelativeSource={RelativeSource Self}}">
+                                <TextBlock.Style>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Text, ElementName=NullTextBox}" Value="">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                        <Setter Property="Visibility" Value="Hidden" />
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
